--- a/src/styles/menuVaccines.scss
+++ b/src/styles/menuVaccines.scss
@@ -17,7 +17,7 @@
 
         button {
             border: none;
-            margin-right: 40px;
+            padding: 14px;
             background: #5CDB95;
             color: #05386B; 
             cursor: pointer;
