--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,43 +1,75 @@
 #component-header {
     display: flex;
-    padding: 32px;
     justify-content: center;
-    background: #5CDB95;
     position: fixed;
-    width: 145.3vh;
+    width: 100%;
+    height: 130px;
+    background-color: white;
+    z-index: 1;
 
-    .title-info {
+    .header--contain {
+        width: 70%;
+        margin: auto;
         display: flex;
-        color: #05386B;
+        justify-content: space-between;
+        align-items: center;
 
-        h1 {
-            font: 700 40px 'Quicksand', sans-serif ;
-            text-decoration: underline;
+        .header--logotipo {
+            display: flex;
+            color: #05386B;
+
+            img {
+                width: 90px;
+            }
+    
+            h1 {
+                font: 700 40px 'Quicksand', sans-serif ;
+                text-decoration: underline;
+            }
+    
+            p {
+                font: 500 24px 'Quicksand', sans-serif ;
+                padding: 14px 32px;
+            }
         }
 
-        p {
-            font: 500 24px 'Quicksand', sans-serif ;
-            padding: 14px 32px;
-        }
-    }
+        .pages-button {
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: row;
+            padding: 14px;
+            margin-left: 200px;
+    
+            li {
+                width: 100px;
+                border: none;
+                cursor: pointer;
+                font: 500 17px 'Quicksand', sans-serif ;
+                display: flex;
+                position: relative;
+                justify-content: center;
+    
+                &:hover {
+                    color: #45327E;
+                }
 
-    .pages-button {
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: row;
-        padding: 14px;
-        margin-left: 200px;
+                &:after {
+                    position: absolute;
+                    bottom: -5px;
+                    left: 46%;
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 10px;
+                    content: "";
+                    background-color: #45327E;
+                    opacity: 0;
+                    transition: all 200ms linear 0s;
+                }
 
-        button {
-            width: 100px;
-            border: none;
-            background: #5CDB95;
-            color: #05386B; 
-            cursor: pointer;
-            font: 500 24px 'Quicksand', sans-serif ;
-
-            &:hover {
-                color: #edf5e1;
+                &:hover:after {
+                    bottom: -10px;
+                    opacity: 1;
+                }
             }
         }
     }
