--- a/src/styles/menuVaccines.scss
+++ b/src/styles/menuVaccines.scss
@@ -1,8 +1,51 @@
 #component-menuVaccines { 
     display: flex;
-    padding: 120px;
+    
+    // padding: 120px;
     align-items: center;
     flex-direction: column;
+    align-items: center;
+    height: 100vh;
+
+    .contain {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        line-height: 50px;
+
+        nav {
+            display: flex;
+            margin-top: 20px;
+        }
+
+        li {
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.20);
+            border-radius: 15px;
+            transform: scale(0.9);
+            width: 155px;
+            transition: all 200ms linear 0s;
+
+            p {
+                font-weight: 500;
+            }
+
+            img {
+                width: 45px
+            }
+
+            &:hover {
+                transform: scale(1);
+            }
+        }
+    }
 
     strong {
         font: 700 28px 'Quicksand', sans-serif;
