--- a/src/styles/menuVaccines.scss
+++ b/src/styles/menuVaccines.scss
@@ -1,6 +1,6 @@
-#component-menuVaccines { 
+#component-menuVaccines {
     display: flex;
-    
+
     // padding: 120px;
     align-items: center;
     flex-direction: column;
@@ -16,9 +16,21 @@
         align-items: center;
         line-height: 50px;
 
+        @media screen and (max-width: 960px) {
+            padding: 15px;
+            line-height: 30px;
+            text-align: center;
+        }
+
         nav {
             display: flex;
             margin-top: 20px;
+
+            @media screen and (max-width: 960px) {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
         }
 
         li {
@@ -51,7 +63,7 @@
         font: 700 28px 'Quicksand', sans-serif;
     }
 
-    
+
     main {
         display: flex;
         flex-direction: row;
@@ -62,7 +74,7 @@
             border: none;
             padding: 14px;
             background: #5CDB95;
-            color: #05386B; 
+            color: #05386B;
             cursor: pointer;
             font: 500 18px 'Quicksand', sans-serif;
 
