--- a/src/styles/vaccines.scss
+++ b/src/styles/vaccines.scss
@@ -11,9 +11,10 @@
         align-items: center;
         width: 95%;
         box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.10);
-        
+
         .titulo {
             text-align: center;
+            margin: 10px 0px;
         }
 
         strong {
@@ -21,24 +22,31 @@
             margin-top: 10px;
             font: 500 28px 'Quicksand', sans-serif;
             display: block;
+            word-break: break-word;
         }
 
         img {
             margin: auto;
             padding: 0 15%;
             max-width: 100%;
+            margin: 20px 0px;
         }
 
         p {
             margin-bottom: 20px;
-            font: 400 22px 'Quicksand', sans-serif;
+            font: 400 16px 'Quicksand', sans-serif;
         }
 
         ul {
-            li{
+            li {
                 margin-bottom: 10px;
-                font: 400 22px 'Quicksand', sans-serif;
+                font: 400 16px 'Quicksand', sans-serif;
             }
         }
+    }
+
+    @media screen and (max-width: 960px) {
+        padding: 0px;
+        margin-bottom: 20px;
     }
 }
