--- a/src/styles/menuVaccines.scss
+++ b/src/styles/menuVaccines.scss
@@ -1,30 +1,31 @@
 #component-menuVaccines {
     display: flex;
-
+    background: linear-gradient(90deg, #05386B, #021222);
     // padding: 120px;
     align-items: center;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 30 vh ;
 
     .contain {
+        margin-top: 120px;
         height: 100%;
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        line-height: 50px;
+        line-height: 20px;
 
         @media screen and (max-width: 960px) {
             padding: 15px;
-            line-height: 30px;
             text-align: center;
         }
 
         nav {
+            position: relative;
             display: flex;
-            margin-top: 20px;
+            padding: 5px;
 
             @media screen and (max-width: 960px) {
                 flex-wrap: wrap;
@@ -36,51 +37,39 @@
         li {
             display: flex;
             flex-direction: column;
-            padding: 20px;
+            padding: 0px 15px;
             justify-content: center;
             align-items: center;
-            box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.20);
-            border-radius: 15px;
-            transform: scale(0.9);
-            width: 155px;
             transition: all 200ms linear 0s;
+            text-decoration: none;
+            color: #fff;
+            
+
 
             p {
                 font-weight: 500;
+                padding: 0px;
+                transition: all 80ms linear 0s;
+                border-bottom: 0px solid #9bcee4 ;
             }
 
             img {
-                width: 45px
+                position: flex;
+                width: 30px;
+                opacity: 0;
+                margin-top: 20px;
+                transition: all 80ms linear 0s;
             }
 
-            &:hover {
-                transform: scale(1);
+
+            &:hover img {
+                opacity: 1;
+                margin-top: 10px;
             }
-        }
-    }
-
-    strong {
-        font: 700 28px 'Quicksand', sans-serif;
-    }
-
-
-    main {
-        display: flex;
-        flex-direction: row;
-        padding: 32px;
-        align-items: center;
-
-        button {
-            border: none;
-            padding: 14px;
-            background: #5CDB95;
-            color: #05386B;
-            cursor: pointer;
-            font: 500 18px 'Quicksand', sans-serif;
-
-            &:hover {
-                color: #edf5e1;
+            &:hover p {
+                border-bottom: 2px solid #9bcee4 ;
             }
         }
     }
+
 }
