--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 body, input, button, textarea {
     font: 400 16px 'Quicksand', sans-serif;
+
 }
 
 * {
@@ -8,5 +9,194 @@ body, input, button, textarea {
     box-sizing: border-box;
     // color: #333333 !important;
     // background: #5CDB95;
+    scroll-behavior: smooth;
+    text-indent: 0;
 }
+
+
+.banner-historia{
+    padding-top: 130px;
+    height: 100vh;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    box-sizing: border-box;
+    z-index: 5;
+    max-width: 100%;
+    align-content: stretch;
+
+    .banner-text {
+        max-width: 960px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        display: block;
+
+
+        h1 {
+            margin: 0 0 10px 0;
+            font-size: 40px;
+            font-weight: bold;
+            line-height: 35px;
+            color: #ffae26;
+        }
+
+        h2 {
+            color: #fff;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        .col {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+    }
+
+    &::before{
+        content : "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient(rgba(0,0,0,.8), rgba(255,255,255,.5)), url("../assets/images/banner-vacina.jpg");
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+.banner-projeto{
+    padding-top: 130px;
+    height: 100vh;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    box-sizing: border-box;
+    z-index: 5;
+    max-width: 100%;
+    align-content: stretch;
+
+    .banner-text {
+        max-width: 960px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        display: block;
+
+
+        h1 {
+            margin: 0 0 10px 0;
+            font-size: 40px;
+            font-weight: bold;
+            line-height: 35px;
+            color: #ffae26;
+        }
+
+        h2 {
+            color: #fff;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        .col {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+    }
+
+    &::before{
+        content : "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.5)), url("../assets/images/Banner-Projeto.png");
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+}
+
+
+.banner-button{
+    color: #fff;
+    margin-top: 10px;
+    max-width: 960px;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border-bottom: 2px solid #fff;
+    border-radius: 5px;
+}
+
+#page {
+    display: flex;
+    padding: 20px 50px;
+    justify-content: center;
+    max-width: 960px;
+    margin: auto;
+    border-radius: 20px;
+    box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.10);
+    align-items: center;
+    scroll-behavior: smooth;
+    }
+
+    section {
+        display: flex;
+        flex-direction: column;
+        padding: 16px 48px;
+        text-align: justify;
+        align-items: center;
+        
+        .history-title{
+            padding: 5px;
+            background: #D4E6F1;
+            border-radius: 10px 10px 0 0 ;
+            border-bottom: 2px solid #05386B;
+            margin: 8px;
+        }
+
+        a{
+            text-decoration: none;
+        }
+
+        p {
+            font: 400 20px 'Quicksand', sans-serif;
+            margin-bottom: 5px;
+            line-height: 150%;
+        }
+    }
+
+    .professores{
+        margin: 0;
+        padding: 0;
+        text-indent: 0;
+
+        .professor{
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            flex: 4;
+
+            p{
+                padding: 20px;
+            }
+
+            .img-professor{
+                margin-top: 55px ;
+                max-height: 200px;
+                border-radius: 20px;
+            }
+        }
+    }
+
 
