--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -86,7 +86,8 @@ main {
         .px-22 {
             padding-left: 25px;
             padding-right: 25px;
-
+            margin: 20px 0px;
+            width: 90%;
         }
 
         @media (min-width: 768px){
@@ -125,23 +126,22 @@ main {
             padding-top: 19px;
 
             .card-title{
+                text-align: center;
                 margin: 2px;
                 font-style: normal;
                 font-weight: 600;
                 font-size: 20px;
-                text-align: center;
                 color: #333333;
             }
 
             .card-line{
-                text-align: center;
+                text-indent: 0;
+                text-align: left;
                 font-style: normal;
                 font-weight: 500;
                 font-size: 14px;
                 letter-spacing: 0.01em;
                 color: #777777;
-                padding-right: 14px;
-                padding-left: 15px;
             }
         }
         &:hover{
@@ -160,7 +160,7 @@ main {
     border-radius: 20px;
     box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.10);
     align-items: center;
-
+    scroll-behavior: smooth;
     }
 
 
@@ -172,11 +172,16 @@ main {
         text-align: justify;
         align-items: center;
         
-        .titulo{
-            padding: 3px;
-            background: #c5c3c3;
+        .history-title{
+            padding: 5px;
+            background: #D4E6F1;
             border-radius: 10px 10px 0 0 ;
             border-bottom: 2px solid #05386B;
+            margin: 8px;
+        }
+
+        a{
+            text-decoration: none;
         }
 
         p {
