--- a/src/styles/vaccines.scss
+++ b/src/styles/vaccines.scss
@@ -1,7 +1,63 @@
+.banner-vacinas{
+    padding-top: 130px;
+    height: 100vh;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    box-sizing: border-box;
+    z-index: 5;
+    max-width: 100%;
+    align-content: stretch;
+
+    .banner-text {
+        max-width: 960px;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+        display: block;
+
+
+        h1 {
+            margin: 0 0 10px 0;
+            font-size: 40px;
+            font-weight: bold;
+            line-height: 35px;
+            color: #ffae26;
+        }
+
+        h2 {
+            color: #fff;
+            margin-bottom: 20px;
+            font-size: 24px;
+        }
+
+        .col {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+    }
+
+    &::before{
+        content : "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient(rgba(0,0,0,.8), rgba(255,255,255,.5)), url("../assets/images/banner-vacinas.jpg");
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+
 #page-vaccines {
     display: flex;
     padding: 0 210px;
     margin-bottom: 100px;
+    
 
     main {
         background: #fff;
