--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -27,12 +27,12 @@
             }
 
             h1 {
-                font: 700 40px 'Quicksand', sans-serif;
+                font-family: 'Nunito Sans', sans-serif;
                 text-decoration: underline;
             }
 
             p {
-                font: 500 24px 'Quicksand', sans-serif;
+                font-family: 'Nunito Sans', sans-serif;
                 padding: 14px 32px;
             }
         }
