--- a/src/styles/menuVaccines.scss
+++ b/src/styles/menuVaccines.scss
@@ -1,14 +1,15 @@
 #component-menuVaccines {
+    position: sticky;
     display: flex;
-    background: linear-gradient(90deg, #05386B, #021222);
-    // padding: 120px;
-    align-items: center;
+    background: transparent;
     flex-direction: column;
     align-items: center;
-    height: 150px ;
+    height: 300px ;
+    justify-content: center;
+
 
     .contain {
-        height: 100%;
+        height: 57%;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -17,11 +18,13 @@
         line-height: 20px;
 
         @media screen and (max-width: 960px) {
+
             padding: 15px;
             text-align: center;
         }
 
         nav {
+            
             position: relative;
             display: flex;
             padding: 5px;
@@ -34,6 +37,7 @@
         }
 
         li {
+            
             display: flex;
             flex-direction: column;
             padding: 0px 15px;
@@ -46,8 +50,10 @@
 
 
             p {
+                border-radius: 5px;
+                background-color: rgba($color: #000000, $alpha: 0.3);
                 font-weight: 500;
-                padding: 0px;
+                padding: 5px;
                 transition: all 80ms linear 0s;
                 border-bottom: 0px solid #ffae26 ;
             }
