--- a/src/styles/vaccines.scss
+++ b/src/styles/vaccines.scss
@@ -1,15 +1,15 @@
 .banner-vacinas{
-    padding-top: 130px;
-    height: 100vh;
+    height: 62vh;
     display: flex;
     align-items: baseline;
-    justify-content: center;
+    justify-content: start;
     box-sizing: border-box;
-    z-index: 5;
+    z-index: 1;
     max-width: 100%;
     align-content: stretch;
 
     .banner-text {
+        font-family: 'Lobster', cursive;
         max-width: 960px;
         width: 100%;
         display: flex;
@@ -27,7 +27,7 @@
         }
 
         h2 {
-            color: #fff;
+            color: #05386bb3;
             margin-bottom: 20px;
             font-size: 24px;
         }
@@ -56,7 +56,8 @@
 #page-vaccines {
     display: flex;
     padding: 0 210px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+    margin-top: 0%;
     
 
     main {
@@ -76,7 +77,8 @@
         strong {
             margin-bottom: 20px;
             margin-top: 10px;
-            font: 500 28px 'Quicksand', sans-serif;
+            font-family: 'Nunito Sans', sans-serif;
+            font-size :xx-large;
             display: block;
             word-break: break-word;
         }
@@ -89,14 +91,16 @@
         }
 
         p {
+            text-align: justify;
             margin-bottom: 20px;
-            font: 400 16px 'Quicksand', sans-serif;
+            font-family: 'Nunito Sans', sans-serif;
+            font-size: 18px;
         }
 
         ul {
             li {
                 margin-bottom: 10px;
-                font: 400 16px 'Quicksand', sans-serif;
+                font-family: 'Nunito Sans', sans-serif;
             }
         }
     }
