--- a/src/styles/scrollIndicator.scss
+++ b/src/styles/scrollIndicator.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
 
     .scrolldown {
-        border: 2px solid #484848;
+        border: 2px solid white;
         border-radius: 30px;
         height: 46px;
         margin: 0 auto 8px;
@@ -19,7 +19,7 @@
             animation-duration: 1.5s;
             animation-name: scrolldown;
             animation-iteration-count: infinite;
-            fill: #484848;
+            fill: white;
         }
 
         .scrolldown-p2 {
