--- a/src/styles/vaccines.scss
+++ b/src/styles/vaccines.scss
@@ -1,4 +1,4 @@
-.banner-vacinas{
+.banner-vacinas {
     height: 62vh;
     display: flex;
     align-items: baseline;
@@ -7,6 +7,10 @@
     z-index: 1;
     max-width: 100%;
     align-content: stretch;
+
+    @media screen and (max-width: 960px) {
+        height: auto;
+    }
 
     .banner-text {
         font-family: 'Lobster', cursive;
@@ -35,15 +39,19 @@
         .col {
             flex: 0 0 50%;
             max-width: 50%;
+
+            @media screen and (max-width: 960px) {
+                max-width: 80%;
+            }
         }
     }
 
-    &::before{
-        content : "";
+    &::before {
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
-        background: linear-gradient(rgba(0,0,0,.8), rgba(255,255,255,.5)), url("../assets/images/banner-vacinas.jpg");
+        background: linear-gradient(rgba(0, 0, 0, .8), rgba(255, 255, 255, .5)), url("../assets/images/banner-vacinas.jpg");
         width: 100%;
         height: 100%;
         z-index: -1;
@@ -58,7 +66,6 @@
     padding: 0 210px;
     margin-bottom: 50px;
     margin-top: 0%;
-    
 
     main {
         background: #fff;
@@ -67,27 +74,48 @@
         border-radius: 20px;
         align-items: center;
         width: 95%;
-        box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.10);
+        box-shadow: 0px 0px 44px -5px rgba(102, 102, 102, 0.25);
+
+        @media screen and (max-width: 960px) {
+            padding: 20px 25px;
+        }
 
         .titulo {
             text-align: center;
             margin: 10px 0px;
+            border-top: 2px solid #ffa000;
+            border-bottom: 2px solid #ffa000;
+            padding: 6px 0;
+            width: 50%;
+            margin: auto;
+            font-size: 32px;
+
+            @media screen and (max-width: 960px) {
+                width: 100%;
+            }
         }
 
-        strong {
+        h3 {
             margin-bottom: 20px;
             margin-top: 10px;
             font-family: 'Nunito Sans', sans-serif;
-            font-size :xx-large;
+            font-size: xx-large;
             display: block;
             word-break: break-word;
+            font-size: 26px;
+            margin-bottom: 10px;
         }
 
         img {
-            margin: auto;
-            padding: 0 15%;
-            max-width: 100%;
-            margin: 20px 0px;
+            width: 650px;
+            box-shadow: 0px 0px 44px -5px rgba(21, 21, 21, 0.25);
+            border-radius: 10px;
+            display: block;
+            margin: 20px auto;
+
+            @media screen and (max-width: 960px) {
+                width: 100%;
+            }
         }
 
         p {
